<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_to_tf</name>
  <version>0.1.0</version>
  <description>Converts an Odometry message to a TF message</description>
  <maintainer email="tim.wiese@esa.int">Tim Wiese</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
